Fix SonarQube issues
RISDEV-0000